--- a/package.json
+++ b/package.json
@@ -7,9 +7,14 @@
     "type-check": "tsc"
   },
   "dependencies": {
+    "@popperjs/core": "^2.11.7",
+    "bootstrap": "^5.3.0-alpha3",
+    "firebase": "^9.20.0",
     "next": "latest",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-modal": "^3.16.1",
+    "sass": "^1.62.0"
   },
   "devDependencies": {
     "@types/node": "^12.12.21",
