--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@popperjs/core": "^2.11.7",
+    "@zeit/next-sass": "^1.0.1",
     "bootstrap": "^5.3.0-alpha3",
     "firebase": "^9.20.0",
     "next": "latest",
