--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@zeit/next-sass": "^1.0.1",
     "bootstrap": "^5.3.0-alpha3",
     "firebase": "^9.20.0",
+    "mini-css-extract-plugin": "^2.7.5",
     "next": "latest",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
