--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,28 @@ node_modules/
 *.env
 .DS_Store
 .next/
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+
+# dependencies
+node_modules/
+
+# testing
+coverage/
+
+# production
+build/
+
+# misc
+.DS_Store
+
+# next.js
+.next/
+
+# next.js static export
+out/
+
+# next.js dynamic export
+exports/
+
+# next.js serverless
+serverless/
